--- a/rinks.html
+++ b/rinks.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="Roll HV">
     <meta name="description" content="your guide to roller skating in the Hudson Valley">
     <meta name="author" content="Shauna Keating">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> -->
