--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Home - Roll HV</title>
+    <title>Home | Roll HV</title>
     <meta property="og:type" content="website">
     <meta property="og:title" content="Roll HV">
     <meta name="description" content="your guide to roller skating in the Hudson Valley">
@@ -37,10 +37,45 @@
         <section>
 
             <p>your guide to roller skating in the Hudson Valley</p>
-            <iframe
-                src="https://www.google.com/maps/d/u/0/embed?mid=1UiMBVNXN1-6D9_lVdr8eRGKZhI_lr8o&ehbc=2E312F&noprof=1"
-                width="640" height="480"></iframe>
         </section>
+        <section class="home-row">
+
+            <div>
+                <img src="img/rinks-img.jpg" alt-"" />
+                <a href="rinks.html">
+                    <h2>
+                        Rinks
+                    </h2>
+                </a>
+
+            </div>
+
+            <div>
+                <img src="img/trails-img.jpg" alt-" " />
+                <a href=" trails.html">
+                <h2>
+                    Trails
+                </h2>
+                </a>
+
+            </div>
+
+            <div>
+                <img src="img/image.jpg" alt-" " />
+                <a href=" skateparks.html">
+                <h2>
+                    Skateparks
+                </h2>
+                </a>
+
+            </div>
+
+            </section>
+            <section>
+                <iframe
+                    src="https://www.google.com/maps/d/u/0/embed?mid=1UiMBVNXN1-6D9_lVdr8eRGKZhI_lr8o&ehbc=2E312F&noprof=1"
+                    width="640" height="480"></iframe>
+            </section>
     </main>
     <footer>
         <a href="#top"> <button>Return to Top</button></a>
