--- a/rinks.html
+++ b/rinks.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body class="rinks">
     <header>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active" id="logo" aria-label="Home">🛼</a>
@@ -37,7 +37,7 @@
         <section>
             <p>roller rinks are alive and well in the Hudson Valley, each has something unique to offer.</p>
         </section>
-        <section>
+        <section class="light">
             <h2>Skate Time</h2>
             <img src="img/skatetime.webp" alt="" class="st-img" />
             <!-- that alt is blank on purpose, I am deeming this a decorative image-->
@@ -61,7 +61,7 @@
                 <li><strong>Sunday</strong> 10am-12pm (Tot Time), 1pm–7pm</li>
             </ul>
         </section>
-        <section>
+        <section class="dark">
             <h2>Wood N' Wheel</h2>
             <img src="img/woodnwheel.jpg" alt="" />
             <!-- that alt is blank on purpose, I am deeming this a decorative image-->
