--- a/skateparks.html
+++ b/skateparks.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body class="skateparks">
     <header>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active" id="logo" aria-label="Home">🛼</a>
@@ -37,7 +37,7 @@
         <section>
             <p>drop in at these local skateparks with features sufficient for shreddin on quads</p>
         </section>
-        <section>
+        <section class="light">
             <h2>Saugerties Skatepark</h2>
             <img src="img/saugsp.jpg" alt="" />
             <!-- again a decorative image, alt text would be redundant because i describe the park in text immediate adjacent to the image-->
