--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body class="home">
     <header>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active" id="logo" aria-label="Home">🛼</a>
