meta info update

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Home | Roll HV</title>
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Roll HV">
+    <meta property="og:title" content="Roll HV" />
+    <meta property="og:url" content="https://shkeating.github.io/rollhv-github/" />
+    <meta property="og:image" content="ogimg.png" />
     <meta name="description" content="your guide to roller skating in the Hudson Valley">
     <meta name="author" content="Shauna Keating">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
